tests/unit-fail-compilation/oldStyleParams.ref
oldStyleParams.c:2:1: error: Incomplete parameter type in function definition.
  Constraint violation (CV-FD3). See C11 sec. 6.7.6.3:4
Translation failed (config dumped). Run kcc -d oldStyleParams.c to see commands run.
